Primeira parte feita

--- a/index.html
+++ b/index.html
@@ -6,19 +6,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/5e244b7f78.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </head>
 <body>
+
+
     <header>
+        <div class="navbar">
+            <a href="https://www.universalpictures.com" target="_blank"> <img src="Midia/Universal-Picture-Logo .png" alt="Logo Universal Pictures" ></a>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="">Home</a>
+                </li>
+
+                <li>
+                    <a href="">Characters</a>
+                </li>
+
+                <li>
+                    <a href="">Get Tickets</a>
+                </li>
+
+                <li>
+                    <a href="">Galery</a>
+                </li>
+            </ul>
+        </nav>
+
+    </div>
 
     </header>
 
     <main>
+        <div class="text-content">
+            <h1><span> Jurassic World</span>Dominion</h1>
 
+            <h2>The epeic conclusion of the Jurassic era</h2>
+
+            <p>
+                Dominion takes place four years after Isla Nublar has been destroyed. Dinosaurs now live and hunt alongside humans all over the world. This fragile balance will reshape the future and determine, once and for all, whether human beings are to remain the apex predators on a planet they now share with history's most fearsome creatures.
+            </p>
+
+            <button>Watch Trailer</button>
+        </div>
+
+        <div class="social-midia">
+            <ul>
+
+                <li>
+                    <a href="">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                </li>
+
+            </ul>
+        </div>
     </main>
 
     <footer>
-        
+        <p>Direitos de imagem de Universal Pictures&copy; </p>
     </footer>
 </body>
 </html>
