--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     </li>
                                     
                                     <li>
-                                        <a href="" rel="next">Galery</a>
+                                        <a href="" rel="next" class="galery-btn">Galery</a>
                                     </li>
                                 </div>
 
@@ -63,7 +63,7 @@
                     </li>
                     
                     <li>
-                        <a href="" rel="next">Galery</a>
+                        <a href="#" rel="next" class="galery-btn">Galery</a>
                     </li>
 
                 </ul>
@@ -180,6 +180,36 @@
 
             <div id="btn-next" class="action-btn btn-next"><span>&raquo;</span></div>
 
+
+        </div>
+    </div>
+
+    <div class="background-galery" id="background-galery">
+        <div class="galery-slider-container">
+
+            <div class="action-btn btn-prev" id="btn-prev-galery"><span>&laquo;</span></div>
+
+            <div class="galery-slider" id="galery-slider">
+
+                <div class="galery-slide">
+                    <img src="Midia/poster-trailer.jpg" alt="">
+                </div>
+
+                <div class="galery-slide">
+                    <img src="Midia/poster-trailer.jpg" alt="">
+                </div>
+
+                <div class="galery-slide">
+                    <img src="Midia/poster-trailer.jpg" alt="">
+                </div>
+
+                <div class="galery-slide">
+                    <img src="Midia/poster-trailer.jpg" alt="">
+                </div>
+
+            </div>
+
+            <div class="action-btn btn-next" id="btn-next-galery"><span>&raquo;</span></div>
 
         </div>
     </div>
